WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188634
Custom element constructor doesn't use HTMLElement in new.target's realm
https://bugs.webkit.org/show_bug.cgi?id=188634
Summary
Custom element constructor doesn't use HTMLElement in new.target's realm
Ryosuke Niwa
Reported
2018-08-15 21:18:57 PDT
When a custom element constructor invokes HTMLElement constructor of a different realm, WebKit uses that realm's HTMLElement to construct the element instead of HTMLElement in new.target's realm.
Attachments
Fixes the bug
(6.33 KB, patch)
2018-08-15 21:52 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Fixed the change log
(6.34 KB, patch)
2018-08-15 21:59 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2018-08-15 21:52:51 PDT
Created
attachment 347244
[details]
Fixes the bug
Radar WebKit Bug Importer
Comment 2
2018-08-15 21:53:52 PDT
<
rdar://problem/43365966
>
EWS Watchlist
Comment 3
2018-08-15 21:56:11 PDT
Attachment 347244
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:14: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ryosuke Niwa
Comment 4
2018-08-15 21:59:51 PDT
Created
attachment 347245
[details]
Fixed the change log
Keith Miller
Comment 5
2018-08-16 12:58:07 PDT
Comment on
attachment 347245
[details]
Fixed the change log r=me.
Ryosuke Niwa
Comment 6
2018-08-16 13:50:59 PDT
Comment on
attachment 347245
[details]
Fixed the change log Thanks for the review!
WebKit Commit Bot
Comment 7
2018-08-16 14:18:09 PDT
Comment on
attachment 347245
[details]
Fixed the change log Clearing flags on attachment: 347245 Committed
r234957
: <
https://trac.webkit.org/changeset/234957
>
WebKit Commit Bot
Comment 8
2018-08-16 14:18:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug